tests/errors/alfa/semantic_error6.alfa
//****Error semantico en lin X: Condicional con condicion de tipo int.
main
{
    int x, y ;
    boolean a,b; 

    x=1;
    x=2;
    a=true;
    a=false;

    if ((x+3)) {
        y=0;
    }      
}    